--- a/PhpstormProjects/Naro-Blog/config/services.yaml
+++ b/PhpstormProjects/Naro-Blog/config/services.yaml
@@ -6,7 +6,12 @@
 parameters:
 
 services:
-    # default configuration for services in *this* file
+    Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler:
+        arguments:
+            - '%env(DATABASE_URL)%'
+            -  { db_table: 'sessions'}
+
+        # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
