--- a/PhpstormProjects/Naro-Blog/config/packages/framework.yaml
+++ b/PhpstormProjects/Naro-Blog/config/packages/framework.yaml
@@ -1,10 +1,16 @@
 # see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
-    secret: '%env(APP_SECRET)%'
-    #csrf_protection: true
+        secret: '%env(APP_SECRET)%'
+        #csrf_protection: true
 
-    # Note that the session will be started ONLY if you read or write from it.
-    session: true
+        # Note that the session will be started ONLY if you read or write from it.
+        session:
+            enabled: true
+            handler_id: Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler
+
+
+
+
 
     #esi: true
     #fragments: true
