--- a/.env
+++ b/.env
@@ -37,5 +37,11 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://caee6471f11ba6:6de8c5d43b71c0@sandbox.smtp.mailtrap.io:2525
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+###MAILER_DSN=gmail://narododo007%40gmail.com:Grammaire1@smtp.gmail.com
+
+###< symfony/google-mailer ###
