last update MAY

--- a/.env
+++ b/.env
@@ -45,3 +45,7 @@ MAILER_DSN=smtp://caee6471f11ba6:6de8c5d43b71c0@sandbox.smtp.mailtrap.io:2525
 ###MAILER_DSN=gmail://narododo007%40gmail.com:Grammaire1@smtp.gmail.com
 
 ###< symfony/google-mailer ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
