--- a/config/services.yaml
+++ b/config/services.yaml
@@ -9,7 +9,7 @@ services:
     Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler:
         arguments:
             - '%env(DATABASE_URL)%'
-            -  { db_table: 'sessions'}
+            -  { db_table: 'session'}
 
         # default configuration for services in *this* file
     _defaults:
