--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -7,6 +7,6 @@ vich_uploader:
 
   mappings:
     posts_image:
-      uri_prefix: /images/posts
-      upload_destination: '%kernel.project_dir%/public/images/posts'
+      uri_prefix: /img/posts
+      upload_destination: '%kernel.project_dir%/public/img/posts'
       namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
